--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGO_URI=mongodb+srv://jai:jais2793@chatapp.5cip24f.mongodb.net/?retryWrites=true&w=majority&appName=chatApp
+NODE_ENV=development
 
 PORT=3000
-
 BASE_URL=http://localhost:3000
 FRONTEND_URL=http://localhost:5173
