--- a/.env
+++ b/.env
@@ -2,5 +2,9 @@ MONGO_URI=mongodb+srv://jai:jais2793@chatapp.5cip24f.mongodb.net/?retryWrites=tr
 NODE_ENV=development
 
 PORT=3000
-BASE_URL=http://localhost:3000
-FRONTEND_URL=http://localhost:5173
+
+# BASE_URL=http://localhost:3000
+# FRONTEND_URL=http://localhost:5173
+
+BASE_URL=https://saascrm-backend.onrender.com
+FRONTEND_URL=https://saas-crm-pi.vercel.app/
