--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-ROLES = "['Super User', 'Admin', 'Reminder Employee', 'Sales Employee']"
+MONGO_URI="mongodb+srv://jai:jais2793@chatapp.5cip24f.mongodb.net/?retryWrites=true&w=majority&appName=chatApp"
